syntax = "proto3";

message CityRequest {
  // City name (required)
  string city_name = 1;

  // Optional state code
  optional string state_code = 2;

  // Optional country code
  optional string country_code = 3;

  // Optional limit
  optional int32 limit = 4;
}
