syntax = "proto3";

import "city.proto";

import "point.proto";

service Geolocation {
  rpc GetCoordinates (CityRequest) returns (Point) {}
}